<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ChatsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arr"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chats"
            android:textSize="20sp"
            android:textColor="#9A9A9A"
            android:gravity="center"
            android:layout_marginEnd="32dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/block"
        android:hint="@string/a"
        android:textColorHint="#9A9A9A"
        android:textColor="#1A1A1A"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:inputType="text" />

    <!-- Список контактов -->
    <ListView
        android:id="@+id/lvContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:divider="#EEEEEE"
        android:dividerHeight="1dp" />


</LinearLayout>